<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.crisav2.obtioniaproject.views.section1.ft00Login.viewModel.LoginFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/label_completed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titleTextStyleLight"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_login"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/complete_login_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_completed_text"
            app:cardCornerRadius="40dp"
            app:cardElevation="3dp"
            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/document_number_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_input_height"
                    android:layout_marginTop="@dimen/border_input_top_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <EditText
                        android:id="@+id/document_number_edit"
                        style="@style/defaultTextStyle"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/input_top_margin"
                        android:background="@drawable/border"
                        android:paddingStart="5dp"
                        android:paddingEnd="@dimen/input_end_padding"
                        android:text="@={loginViewModel.userIDString}"
                        android:autofillHints="Document" />
                    <TextView
                        android:id="@+id/document_number_label"
                        style="@style/defaultLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/label_start_margin"
                        android:layout_marginTop="@dimen/label_top_margin"
                        android:background="@android:color/white"
                        android:labelFor="@+id/document_number_edit"
                        android:text="@string/document_number_label" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/password_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_input_height"
                    android:layout_marginTop="@dimen/border_input_top_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/document_number_container">
                    <EditText
                        android:id="@+id/password_edit"
                        style="@style/defaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/input_top_margin"
                        android:background="@drawable/border"
                        android:paddingStart="5dp"
                        android:paddingEnd="@dimen/input_end_padding"
                        android:text="@={loginViewModel.userPasswordString}"
                        android:autofillHints="Password"
                        android:inputType="textPassword" />
                    <TextView
                        android:id="@+id/password_label"
                        style="@style/defaultLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/label_start_margin"
                        android:layout_marginTop="@dimen/label_top_margin"
                        android:background="@android:color/white"
                        android:labelFor="@+id/password_edit"
                        android:text="@string/password_label" />
                </RelativeLayout>
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_container"
                    app:layout_constraintVertical_bias="0.0"
                    android:text="@string/label__button_login"
                    android:enabled="@{loginViewModel.formValid}"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_style_default"/>

                <ImageButton
                    android:id="@+id/fingerprint_login_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button"
                    android:src="@drawable/ic_login_fingerprint"
                    android:tint="@color/colorPrimary"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/complete_login_container"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/problems_login_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:text="@string/label_button_problem_login"/>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/flagImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:contentDescription="@string/country_flag"
            android:src="@drawable/flag_obtonia"
            android:background="@drawable/rounded_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>